--- a/vagrant/ansible/provision-masters.yml
+++ b/vagrant/ansible/provision-masters.yml
@@ -17,7 +17,7 @@
       dest: /opt/host-3-11-cluster.localhost
   - copy:
       src: ./ping.yml
-      dest: /opt/ping.yml
+      dest: /opt/ansible/ping.yml
   - copy:
       src: /${HOME}/.vagrant.d/insecure_private_key
       dest: /opt/insecure_private_key
