--- a/vagrant/Vagrantfile
+++ b/vagrant/Vagrantfile
@@ -99,6 +99,8 @@ Vagrant.configure("2") do |config|
       end
       ip = "192.168.50.#{i+100}"
       config_vm.vm.network :private_network, ip: ip
+      # Add nat port forward since host to provate-network is slow
+      config_vm.vm.network "forwarded_port", guest: 8443, host: 8443+i-1
       # Ansible Provisioning
       # Inventory file is .vagrant/provisioners/ansible/inventory/vagrant_ansible_inventory
       config_vm.vm.provision :ansible do |ansible|
